<resources>
    <string name="app_name">Список покупок</string>
    <string name="shop_list">Список покупок</string>
    <string name="no_list">Список пуст</string>
    <string name="add_shop_item">Добавить покупку</string>
    <string name="add">Добавить</string>
    <string name="name_shop_item">Продукт</string>
    <string name="count_shop_item">Количество</string>
    <string name="error_incorrect_data">Некорректные данные</string>
    <string name="edit">Изменить</string>
    <string name="error_name_field">Название не должно быть пустым</string>
    <string name="error_count_field">Количество не должно быть пустым</string>
    <string name="error_count_size">Количество должно быть больше 0</string>
    <string name="help">Справка</string>
    <string name="delete">Удалить покупку</string>
    <string name="cancel_buy">Отметка покупки</string>
    <string name="title_delete_help">Как удалить покупку?</string>
    <string name="delete_instruction">Для удаления покупки нажмите на карточке, а затем на значок корзины в верхнем меню нового окна</string>
    <string name="title_check_help">Как отметить покупку?</string>
    <string name="check_help_instructions">Чтобы отметить покупку как сделанную, необходимо в карточке нажать на квадратик, а внутри него появится галочка.
        \nЕсли покупка вновь понадобится, можно сделать обратное действие, и тогда покупка будет отмечена как несделанная</string>
    <string name="confirm_act_dialog">Подтвердите действие</string>
    <string name="dialog_clear_message">Хотите очистить список?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="dialog_delete_item_message">Хотите удалить покупку?</string>
</resources>