<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.addScreen.AddFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_add"
            app:title="@string/add"
            app:titleTextColor="@color/white"
            android:background="@color/main_color"
            app:menu="@menu/menu_add"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/border_color"
            app:hintTextColor="@color/text_color"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_marginVertical="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_shop_item"
                android:lines="1"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/tilCount_add"
            app:boxBackgroundColor="@color/border_color"
            app:hintTextColor="@color/text_color"
            app:helperText=""
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/count_shop_item"
                android:lines="1"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>