<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.listScreen.ListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_list"
            android:background="@color/main_color"
            app:title="@string/shop_list"
            app:titleTextColor="@color/white"
            app:menu="@menu/menu_list"/>

    </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:padding="@dimen/small_margin">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rvShopList"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/tv_no_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/no_list"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textSize="@dimen/title_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_up"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="invisible"
                android:backgroundTint="@color/main_color"
                android:contentDescription="@string/add_shop_item"
                android:src="@drawable/ic_add_100"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:fabCustomSize="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_no_list"
                app:layout_constraintVertical_bias="0.3"
                app:maxImageSize="50dp"
                app:tint="@null" />

            <TextView
                android:layout_marginTop="@dimen/default_margin"
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/add"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fab_add_up"/>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fab"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:elevation="0dp"
                app:srcCompat="@drawable/ic_add"
                app:tint="@null"
                app:borderWidth="0dp"
                android:visibility="visible"
                android:backgroundTint="@color/main_color"
                android:contentDescription="@string/add_shop_item"
                android:layout_margin="@dimen/default_margin"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>