<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.infoScreens.HelpFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_help"
            android:background="@color/main_color"
            app:title="@string/help"
            app:menu="@menu/menu_help"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/default_margin"
            android:id="@+id/ll_delete"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/ib_delete"
                android:src="@drawable/ic_delete_75"
                android:backgroundTint="@color/main_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/delete"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/delete"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="@dimen/menu_text_size"
                android:textStyle="bold"
                android:textColor="@color/main_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ib_delete" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_delete"
            android:layout_margin="@dimen/default_margin"
            android:id="@+id/ll_change_visible"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_check"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_circle_75"
                android:backgroundTint="@color/main_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/delete"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/cancel_buy"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="@dimen/menu_text_size"
                android:textStyle="bold"
                android:textColor="@color/main_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ib_delete" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>